--- a/index.html
+++ b/index.html
@@ -6,37 +6,10 @@
         <title>Blip</title>
     </head>
     <body>
-
-
-        <header id="header">
-            <a href="index.html">
-                <img id="header-logo" src="img/blip-wordmark-fff.png" alt="Blip">
-            </a>
-
-            <nav id="header-navbar">
-                <ul class="navbar-list">
-                    <a><li>!Reminder, the bot is still in beta and is far from done, the bot may not function correctly all the time.</li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a href="https://discord.com/api/oauth2/authorize?client_id=814604271310864403&permissions=8&scope=bot"><li class="get-blip-button">Get Blip</li></a>
-                </ul>
-            </nav>
-        </header>
-
-        <div id="header-filler"></div>
-
         <main>
             <div id="introduction">
-                <img id="blip-introduction-image" src="img/blip-logo-blinking.png">
                 <div id="blip-introduction-text">
-                    <div id="blip-introduction-headline">Get it done<br><span class="regular-blue">in a <u>blip</u></span></div>
-                    <div id="blip-introduction-sub">Blip is a simple, practical<br>Discord bot for your server.</div>
+                    <div id="blip-introduction-headline"><br><span class="regular-blue"><u>Iska</u></span></div>
                 </div>
             </div>
         </main>
